resolving PR issues